landing page - add main, about us, testimonials sections.

--- a/index.html
+++ b/index.html
@@ -27,5 +27,141 @@
         </div>
       </div>
     </div>
+
+    <!-- First section roomi -->
+    <section>
+      <div class="container">
+        <div class="content">
+          <div class="image">
+            <img
+              src="frontend/assets/images/roomi_logo.svg"
+              alt="Roomi Home"
+              width="500"
+              height="500"
+            />
+          </div>
+          <div class="text">
+            <p>
+              Nuestra aplicación está diseñada para ayudar a las personas que
+              buscan mejorar su salud y bienestar, proporcionando una guía
+              completa para combatir la obesidad. Con planes personalizados de
+              hábitos saludables, rutinas de ejercicios, y dietas balanceadas,
+              te acompañamos en cada paso de tu camino hacia un estilo de vida
+              más sano. Además, integramos inteligencia artificial para
+              ofrecerte recomendaciones adaptadas a tus necesidades y metas.
+              ¡Empieza hoy mismo a cambiar tu vida con el apoyo que necesitas!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Header about us -->
+    <section>
+      <div class="header">
+        <h1>Sobre Nosotros</h1>
+      </div>
+    </section>
+
+    <!-- Second section about us  -->
+    <section>
+      <div class="container">
+        <div class="content" style="flex-direction: column">
+          <div class="image">
+            <img
+              src="frontend/assets/images/team.svg"
+              alt="Team unicesmag"
+              width="500"
+              height="500"
+            />
+          </div>
+          <div class="text">
+            <p>
+              Somos un equipo de cuatro estudiantes de la Universidad CESMAG,
+              apasionados por la tecnología y comprometidos con el desarrollo de
+              soluciones que mejoren la calidad de vida de las personas. Nuestra
+              meta es crear una plataforma innovadora que no solo ayude a
+              combatir la obesidad, sino que también promueva hábitos saludables
+              de forma accesible y personalizada. Cada uno de nosotros aporta
+              una visión única y habilidades complementarias en desarrollo web,
+              diseño de interfaces y tecnología, trabajando juntos para ofrecer
+              una aplicación de alto impacto.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Header testimonials -->
+    <section>
+      <div class="header">
+        <h1>Testimonios</h1>
+      </div>
+    </section>
+    <!-- Section testimonials -->
+    <section>
+      <div class="container_cards">
+        <!-- First card -->
+        <div class="card">
+          <div class="icon">
+            <img
+              src="frontend/assets/images/avatar1.svg"
+              alt="Testimonial 1"
+              width="100"
+              height="100"
+            />
+            <h3>Carlos G.</h3>
+          </div>
+          <div class="text">
+            <p>
+              "Gracias a Roomi, he logrado perder 10 kilos en un mes y mejorar
+              mi salud de forma significativa. La aplicación es muy fácil de
+              usar y me ha ayudado a mantenerme motivado en todo momento. ¡La
+              recomiendo a todos!"
+            </p>
+          </div>
+        </div>
+        <!-- Second card -->
+        <div class="card">
+          <div class="icon">
+            <img
+              src="frontend/assets/images/avatar2.svg"
+              alt="Testimonial 1"
+              width="100"
+              height="100"
+            />
+            <h3>Maria R.</h3>
+          </div>
+          <div class="text">
+            <p>
+              "Desde que empecé a usar esta aplicación, mi vida ha cambiado para
+              mejor. He aprendido a establecer hábitos saludables y a seguir un
+              plan de ejercicios que se adapta a mí. Gracias a la inteligencia
+              artificial, recibo consejos personalizados que realmente me
+              motivan. ¡He perdido 5 kilos en solo dos meses!"
+            </p>
+          </div>
+        </div>
+        <!-- Third card -->
+        <div class="card">
+          <div class="icon">
+            <img
+              src="frontend/assets/images/avatar3.svg"
+              alt="Testimonial 1"
+              width="100"
+              height="100"
+            />
+            <h3>Lucía M.</h3>
+          </div>
+          <div class="text">
+            <p>
+              "Lo que más me gusta de la aplicación es su enfoque integral. No
+              solo te brinda rutinas de ejercicio, sino que también te ayuda a
+              mejorar tu alimentación y mentalidad. He aprendido a amar el
+              proceso de cuidarme a mí misma, y los resultados hablan por sí
+              mismos: ¡he bajado 8 kilos!"
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
