--- a/index.html
+++ b/index.html
@@ -11,19 +11,29 @@
       <div class="navbar">
         <div>
           <a href="#" class="logo">
-            <img
-              src="frontend/assets/images/roomi_logo.svg"
-              alt="Logo Roomi"
-              width="100"
-              height="100"
-            />
+            <img src="frontend/assets/images/roomi_logo.svg" alt="Logo Roomi" />
           </a>
         </div>
-        <div>
+        <div id="container_items">
           <a href="#">Inicio</a>
           <a href="#">Sobre Nosotros</a>
           <a href="#">Contacto</a>
           <a href="#">Inicio de sesión</a>
+        </div>
+        <div id="container_menu">
+          <input
+            type="checkbox"
+            id="checkbox"
+            class="checkbox visuallyHidden"
+          />
+          <label for="checkbox">
+            <div class="hamburger hamburger1">
+              <span class="bar bar1"></span>
+              <span class="bar bar2"></span>
+              <span class="bar bar3"></span>
+              <span class="bar bar4"></span>
+            </div>
+          </label>
         </div>
       </div>
     </div>
@@ -163,5 +173,6 @@
         </div>
       </div>
     </section>
+    <script src="frontend/assets/js/main.js"></script>
   </body>
 </html>
