--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
       <div class="navbar">
         <div>
           <a href="#" class="logo">
-            <img src="frontend/assets/images/roomi_logo.svg" alt="Logo Roomi" />
+            <img src="frontend/assets/images/roomi_logo.svg" alt="Logo Roomi"  />
           </a>
         </div>
         <div id="container_items">
           <a href="#">Inicio</a>
           <a href="#">Sobre Nosotros</a>
           <a href="#">Contacto</a>
-          <a href="#">Inicio de sesión</a>
+          <a href="frontend/pages/login.html">Inicio de sesión</a>
         </div>
         <div id="container_menu">
           <input
