--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -32,8 +32,8 @@
             </form>
         </div>
         <div class="right-panel">
-            <img src="../assets/images/roomi_logo.svg" alt="Logo Roomi" width="300" height="auto" />
-            <p>UN SISTEMA INTELIGENTE QUE TE GUÍA HACIA UN ESTILO DE VIDA SALUDABLE.</p>
+            <img src="../assets/images/roomi_logo.svg" alt="Logo Roomi" width="400" height="auto" />
+            <p>UN SISTEMA INTELIGENTE QUE TE GUÍA HACIA UN ESTILO DE VIDA SALUDABLE</p>
         </div>
     </div>
 </body>
