Signin - add connection with js

--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -36,6 +36,7 @@
             <p>UN SISTEMA INTELIGENTE QUE TE GUÍA HACIA UN ESTILO DE VIDA SALUDABLE</p>
         </div>
     </div>
+<script src="../assets/js/login.js"></script>
 </body>
 
 </html>
