--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -41,7 +41,9 @@
           </button>
 
           <p class="register">
-            ¿No tienes una cuenta? <a href="#">Regístrate aquí</a>
+            ¿No tienes una cuenta? <a href="
+            ../pages/register.html
+            ">Regístrate aquí</a>
           </p>
         </form>
       </div>
